--- a/WTO/contents/css/css/comman.css
+++ b/WTO/contents/css/css/comman.css
@@ -1089,9 +1089,9 @@ a, a:hover, a:focus, a:active {
     top: -5px !important;
 }
 
-.tooltiprelative {
+/*.tooltiprelative {
     position: relative;
-}
+}*/
 
 .tooltip.in {
 }
